# pySPAC

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  constants.py  index.html  mkdocs.yml  pyproject.toml  pyspac.py  requirements.txt  setup.py
.github/workflows/: deploy-docs.yml  pre-commit.yml  pytest.yml
boundaries/: index.html
docs/: README.md  boundaries.md  fitting-models.md  generate-models.md  getting-started.md  index.md  models-methods.md  plotting.md  save-load.md  setup-objects.md  uncertainties.md
fitting-models/: index.html
generate-models/: index.html
getting-started/: index.html
models-methods/: index.html
plotting/: index.html
save-load/: index.html
search/: search_index.json
setup-objects/: index.html
src/pyspac/: __init__.py  constants.py  pyspac.py
tests/: tests.py
uncertainties/: index.html
