[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspac"
version = "0.1.0"
authors = [
  { name="Rodrigo C. Boufleur", email="rcboufleur@gmail.com" },
]
description = "A library for fitting and analyzing asteroid phase curves."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "lmfit",
    "sbpy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/rcboufleur/pySPAC"
"Bug Tracker" = "https://github.com/rcboufleur/pySPAC/issues"

[tool.ruff]
line-length = 100
ignore = ["F401", "E501"]
